cargo-features = ["profile-rustflags"]

[workspace]
resolver = "2"

members = [
	"api/bin/chainflip-broker-api",
	"api/bin/chainflip-cli",
	"api/bin/chainflip-ingress-egress-tracker",
	"api/bin/chainflip-lp-api",
	"api/bin/chainflip-elections-tracker",
	"api/cf-rpc-apis",
	"api/cf-rpc-types",
	"api/cf-node-client",
	"api/lib",
	"engine",
	"engine-proc-macros",
	"engine-runner-bin",
	"engine-upgrade-utils",
	"engine/generate-genesis-keys",
	"engine/multisig",
	"engine/sc-client",
	"engine/p2p",
	"foreign-chains/solana/sol-prim",
	"state-chain/amm",
	"state-chain/cf-integration-tests",
	"state-chain/cf-session-benchmarking",
	"state-chain/cfe-events",
	"state-chain/chains",
	"state-chain/custom-rpc",
	"state-chain/ethereum-eip712",
	"state-chain/generic-typeinfo-derive",
	"state-chain/generic-typeinfo-derive/macro",
	"state-chain/node",
	"state-chain/pallets/cf-account-roles",
	"state-chain/pallets/cf-asset-balances",
	"state-chain/pallets/cf-broadcast",
	"state-chain/pallets/cf-cfe-interface",
	"state-chain/pallets/cf-chain-tracking",
	"state-chain/pallets/cf-elections",
	"state-chain/pallets/cf-emissions",
	"state-chain/pallets/cf-environment",
	"state-chain/pallets/cf-flip",
	"state-chain/pallets/cf-funding",
	"state-chain/pallets/cf-governance",
	"state-chain/pallets/cf-ingress-egress",
	"state-chain/pallets/cf-lp",
	"state-chain/pallets/cf-pools",
	"state-chain/pallets/cf-reputation",
	"state-chain/pallets/cf-swapping",
	"state-chain/pallets/cf-threshold-signature",
	"state-chain/pallets/cf-tokenholder-governance",
	"state-chain/pallets/cf-validator",
	"state-chain/pallets/cf-vaults",
	"state-chain/pallets/cf-witnesser",
	"state-chain/pallets/cf-trading-strategy",
	"state-chain/pallets/cf-lending-pools",
	"state-chain/primitives",
	"state-chain/runtime",
	"state-chain/runtime-utilities",
	"state-chain/runtime-utilities/macros",
	"state-chain/test-utilities",
	"state-chain/traits",
	"utilities",
	"utilities/scale-json",
	"utilities/scale-json-event-logger",
]

[workspace.lints.clippy]
blocks_in_conditions = "allow"
missing_const_for_thread_local = "allow"
len_zero = "allow"
multiple_bound_locations = "allow" # This appears to give false positives in some cases.

[workspace.dependencies]
# Third party crates
anyhow = { version = "1.0.81" }
arrayref = { version = "0.3.6" }
assert_cmd = { version = "2.0.14" }
async-broadcast = { version = "0.5.1" }
async-channel = { version = "1.8.0" }
async-trait = { version = "0.1.79" }
base64 = { version = "0.22.1" }
bech32 = { version = "0.9.1", default-features = false }
bigdecimal = { version = "0.4.5" }
bincode = { version = "1.3.3" }
bitcoin = { version = "0.32.3" }
bitvec = { version = "1.0.1", default-features = false }
blake2 = { version = "0.10.4" }
borsh = { version = "1.2.1", default-features = false }
bs58 = { version = "0.5.1", default-features = false }
chrono = { version = "0.4.31" }
clap = { version = "4.5.3" }
codec = { version = "3.7.4", default-features = false, package = "parity-scale-codec" }
config = { version = "0.13.1" }
csv = { version = "1.1.6" }
curve25519-dalek = { version = "4.1.3", default-features = false }
derive-where = { version = "1.2.7" }
digest = { version = "0.10.3", default-features = false }
ed25519-dalek = { version = "2.1.1" }
enum-iterator = { version = "2.1.0" }
env_logger = { version = "0.11.3" }
# NOTE: the chainflip-substrate-compat-1.18 tag exists to ensure aligment of ethereum primitive types
# between ethabi, ethers, ethers-core, and the 1.18 version of Substrate.
ethabi = { git = "https://github.com/chainflip-io/ethabi", tag = "chainflip-substrate-compat-1.18", default-features = false }
ethbloom = { version = "0.14.1" }
# NOTE: the chainflip-substrate-compat-1.18 tag exists to ensure aligment of ethereum primitive types
# between ethabi, ethers, ethers-core, and the 1.18 version of Substrate.
ethers = { git = "https://github.com/chainflip-io/ethers-rs", tag = "chainflip-substrate-compat-1.18" }
ethers-core = { git = "https://github.com/chainflip-io/ethers-rs", tag = "chainflip-substrate-compat-1.18" }
fs_extra = { version = "1.3.0" }
futures = { version = "0.3.30" }
futures-core = { version = "0.3.30" }
futures-util = { version = "0.3.30" }
generic-array = { version = "1.1.0", default-features = false }
heck = { version = "0.5.0" }
hex = { version = "0.4.3", default-features = false }
hex-literal = { version = "0.4.1", default-features = false }
hmac-sha512 = { version = "1.1.4" }
http = { version = "1.1.0" }
insta = { version = "1.38.0" }
itertools = { version = "0.13", default-features = false }
jsonrpsee = { version = "0.24.8" }
lazy_format = { version = "2.0" }
lazy_static = { version = "1.4" }
libp2p-identity = { version = "0.2.3" }
libsecp256k1 = { version = "0.7", default-features = false }
log = { version = "0.4.16" }
lru = { version = "0.16.3", default-features = false }
mockall = { version = "0.13.0" }
nanorand = { version = "0.7.0", default-features = false }
num-bigint = { version = "0.4.3" }
num-derive = { version = "0.4.2" }
num-traits = { version = "0.2.17" }
paste = { version = "1.0.15" }
pin-project = { version = "1.1.3" }
predicates = { version = "3.0" }
proc-macro2 = { version = "1.0.79" }
prometheus = { version = "0.13.0", default-features = false }
# Lock these, some proptests break with newer versions
proptest = { version = "=1.6" }
proptest-derive = { version = "=0.5.1" }
quickcheck = { version = "1.0.3" }
quickcheck_macros = { version = "1" }
quote = { version = "1.0.35" }
rand = { version = "0.8.5", default-features = false }
rayon = { version = "1.7.0" }
redis = { version = "0.27.5" }
regex = { version = "1.10.2" }
reqwest = { version = "0.11.4" }
rlp = { version = "0.5.2", default-features = false }
rocksdb = { version = "0.21.0" }
scale-decode = { version = "0.16" }
scale-info = { version = "2.11.1", default-features = false }
scale-value = { version = "0.18.0" }
scale-type-resolver = { version = "0.2" }
schnorrkel = { version = "0.11.4" }
scopeguard = { version = "1.2.0" }
secp256k1 = { version = "0.29.1" }
serde = { version = "1.0.219", default-features = false }
serde-big-array = "0.5.1"
serde_bytes = { version = "0.11.14", default-features = false }
serde_json = { version = "1.0.140", default-features = false }
serde_path_to_error = "*"
sha2 = { version = "0.10.7", default-features = false }
sha2-const = { version = "0.1.2", default-features = false }
ss58-registry = { version = "1.41" }
strum = { version = "0.26.3", default-features = false }
strum_macros = { version = "0.26.4", default-features = false }
syn = { version = "2.0.53" }
tempfile = { version = "3.8.1" }
thiserror = { version = "1.0.50", default-features = false }
tiny-bip39 = { version = "1.0.0" }
tokio = { version = "1.44.2" }
tokio-stream = { version = "0.1.14" }
toml = { version = "0.8.10" }
tracing = { version = "0.1.37" }
# See: https://github.com/tokio-rs/tracing/issues/3369
tracing-subscriber = { version = "=0.3.19" }
typenum = { version = "1.15" }
url = { version = "2.4" }
warp = { version = "0.3.6" }
# TODO replace this crate. It's not very well maintained.
web3 = { git = "https://github.com/tomusdrw/rust-web3", rev = "3b01caf7fb7a151fc7ec69a2f42a35252912b3c8" }
x25519-dalek = { version = "2.0" }
zeroize = { version = "1.7.0" }
zmq = { git = "https://github.com/chainflip-io/rust-zmq.git", tag = "chainflip-v0.9.2+1" }
n-functor = "0.2.1"

# Subxt
subxt = { version = "0.42" }

# PolkadotSdk Pallets
pallet-aura = { git = "https://github.com/chainflip-io/polkadot-sdk.git", tag = "chainflip-substrate-stable2509", default-features = false }
pallet-authorship = { git = "https://github.com/chainflip-io/polkadot-sdk.git", tag = "chainflip-substrate-stable2509", default-features = false }
pallet-grandpa = { git = "https://github.com/chainflip-io/polkadot-sdk.git", tag = "chainflip-substrate-stable2509", default-features = false }
pallet-session = { git = "https://github.com/chainflip-io/polkadot-sdk.git", tag = "chainflip-substrate-stable2509", default-features = false }
pallet-timestamp = { git = "https://github.com/chainflip-io/polkadot-sdk.git", tag = "chainflip-substrate-stable2509", default-features = false }
pallet-transaction-payment = { git = "https://github.com/chainflip-io/polkadot-sdk.git", tag = "chainflip-substrate-stable2509", default-features = false }
pallet-transaction-payment-rpc = { git = "https://github.com/chainflip-io/polkadot-sdk.git", tag = "chainflip-substrate-stable2509", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/chainflip-io/polkadot-sdk.git", tag = "chainflip-substrate-stable2509", default-features = false }

# PolkadotSdk Frame
frame-benchmarking = { git = "https://github.com/chainflip-io/polkadot-sdk.git", tag = "chainflip-substrate-stable2509", default-features = false }
frame-benchmarking-cli = { git = "https://github.com/chainflip-io/polkadot-sdk.git", tag = "chainflip-substrate-stable2509", default-features = false }
frame-executive = { git = "https://github.com/chainflip-io/polkadot-sdk.git", tag = "chainflip-substrate-stable2509", default-features = false }
frame-metadata = { version = "16.0.0", default-features = false }
frame-metadata-hash-extension = { git = "https://github.com/chainflip-io/polkadot-sdk.git", tag = "chainflip-substrate-stable2509", default-features = false }
frame-support = { git = "https://github.com/chainflip-io/polkadot-sdk.git", tag = "chainflip-substrate-stable2509", default-features = false }
frame-system = { git = "https://github.com/chainflip-io/polkadot-sdk.git", tag = "chainflip-substrate-stable2509", default-features = false }
frame-system-benchmarking = { git = "https://github.com/chainflip-io/polkadot-sdk.git", tag = "chainflip-substrate-stable2509", default-features = false }
frame-system-rpc-runtime-api = { git = "https://github.com/chainflip-io/polkadot-sdk.git", tag = "chainflip-substrate-stable2509", default-features = false }
frame-try-runtime = { git = "https://github.com/chainflip-io/polkadot-sdk.git", tag = "chainflip-substrate-stable2509", default-features = false }

# PolkadotSdk Primitives
sp-api = { git = "https://github.com/chainflip-io/polkadot-sdk.git", tag = "chainflip-substrate-stable2509", default-features = false }
sp-application-crypto = { git = "https://github.com/chainflip-io/polkadot-sdk.git", tag = "chainflip-substrate-stable2509", default-features = false }
sp-arithmetic = { git = "https://github.com/chainflip-io/polkadot-sdk.git", tag = "chainflip-substrate-stable2509", default-features = false }
sp-block-builder = { git = "https://github.com/chainflip-io/polkadot-sdk.git", tag = "chainflip-substrate-stable2509", default-features = false }
sp-blockchain = { git = "https://github.com/chainflip-io/polkadot-sdk.git", tag = "chainflip-substrate-stable2509", default-features = false }
sp-consensus-aura = { git = "https://github.com/chainflip-io/polkadot-sdk.git", tag = "chainflip-substrate-stable2509", default-features = false }
sp-consensus-grandpa = { git = "https://github.com/chainflip-io/polkadot-sdk.git", tag = "chainflip-substrate-stable2509", default-features = false }
sp-core = { git = "https://github.com/chainflip-io/polkadot-sdk.git", tag = "chainflip-substrate-stable2509", default-features = false }
sp-genesis-builder = { git = "https://github.com/chainflip-io/polkadot-sdk.git", tag = "chainflip-substrate-stable2509", default-features = false }
sp-inherents = { git = "https://github.com/chainflip-io/polkadot-sdk.git", tag = "chainflip-substrate-stable2509", default-features = false }
sp-io = { git = "https://github.com/chainflip-io/polkadot-sdk.git", tag = "chainflip-substrate-stable2509", default-features = false }
sp-keyring = { git = "https://github.com/chainflip-io/polkadot-sdk.git", tag = "chainflip-substrate-stable2509", default-features = false }
sp-offchain = { git = "https://github.com/chainflip-io/polkadot-sdk.git", tag = "chainflip-substrate-stable2509", default-features = false }
sp-rpc = { git = "https://github.com/chainflip-io/polkadot-sdk.git", tag = "chainflip-substrate-stable2509", default-features = false }
sp-runtime = { git = "https://github.com/chainflip-io/polkadot-sdk.git", tag = "chainflip-substrate-stable2509", default-features = false }
sp-session = { git = "https://github.com/chainflip-io/polkadot-sdk.git", tag = "chainflip-substrate-stable2509", default-features = false }
sp-staking = { git = "https://github.com/chainflip-io/polkadot-sdk.git", tag = "chainflip-substrate-stable2509", default-features = false }
sp-state-machine = { git = "https://github.com/chainflip-io/polkadot-sdk.git", tag = "chainflip-substrate-stable2509", default-features = false }
sp-storage = { git = "https://github.com/chainflip-io/polkadot-sdk.git", tag = "chainflip-substrate-stable2509", default-features = false }
sp-std = { git = "https://github.com/chainflip-io/polkadot-sdk.git", tag = "chainflip-substrate-stable2509", default-features = false }
sp-timestamp = { git = "https://github.com/chainflip-io/polkadot-sdk.git", tag = "chainflip-substrate-stable2509", default-features = false }
sp-transaction-pool = { git = "https://github.com/chainflip-io/polkadot-sdk.git", tag = "chainflip-substrate-stable2509", default-features = false }
sp-version = { git = "https://github.com/chainflip-io/polkadot-sdk.git", tag = "chainflip-substrate-stable2509", default-features = false }

# PolkadotSdk Client
sc-basic-authorship = { git = "https://github.com/chainflip-io/polkadot-sdk.git", tag = "chainflip-substrate-stable2509", default-features = false }
sc-cli = { git = "https://github.com/chainflip-io/polkadot-sdk.git", tag = "chainflip-substrate-stable2509", default-features = false }
sc-client-api = { git = "https://github.com/chainflip-io/polkadot-sdk.git", tag = "chainflip-substrate-stable2509", default-features = false }
sc-consensus = { git = "https://github.com/chainflip-io/polkadot-sdk.git", tag = "chainflip-substrate-stable2509", default-features = false }
sc-consensus-aura = { git = "https://github.com/chainflip-io/polkadot-sdk.git", tag = "chainflip-substrate-stable2509", default-features = false }
sc-consensus-grandpa = { git = "https://github.com/chainflip-io/polkadot-sdk.git", tag = "chainflip-substrate-stable2509", default-features = false }
sc-consensus-grandpa-rpc = { git = "https://github.com/chainflip-io/polkadot-sdk.git", tag = "chainflip-substrate-stable2509", default-features = false }
sc-executor = { git = "https://github.com/chainflip-io/polkadot-sdk.git", tag = "chainflip-substrate-stable2509", default-features = false }
sc-keystore = { git = "https://github.com/chainflip-io/polkadot-sdk.git", tag = "chainflip-substrate-stable2509", default-features = false }
sc-network = { git = "https://github.com/chainflip-io/polkadot-sdk.git", tag = "chainflip-substrate-stable2509", default-features = false }
sc-offchain = { git = "https://github.com/chainflip-io/polkadot-sdk.git", tag = "chainflip-substrate-stable2509", default-features = false }
sc-rpc = { git = "https://github.com/chainflip-io/polkadot-sdk.git", tag = "chainflip-substrate-stable2509", default-features = false }
sc-rpc-api = { git = "https://github.com/chainflip-io/polkadot-sdk.git", tag = "chainflip-substrate-stable2509", default-features = false }
sc-rpc-spec-v2 = { git = "https://github.com/chainflip-io/polkadot-sdk.git", tag = "chainflip-substrate-stable2509", default-features = false }
sc-service = { git = "https://github.com/chainflip-io/polkadot-sdk.git", tag = "chainflip-substrate-stable2509", default-features = false }
sc-telemetry = { git = "https://github.com/chainflip-io/polkadot-sdk.git", tag = "chainflip-substrate-stable2509", default-features = false }
sc-transaction-pool = { git = "https://github.com/chainflip-io/polkadot-sdk.git", tag = "chainflip-substrate-stable2509", default-features = false }
sc-transaction-pool-api = { git = "https://github.com/chainflip-io/polkadot-sdk.git", tag = "chainflip-substrate-stable2509", default-features = false }
sp-consensus = { git = "https://github.com/chainflip-io/polkadot-sdk.git", tag = "chainflip-substrate-stable2509", default-features = false }

# PolkadotSdk Others
substrate-build-script-utils = { git = "https://github.com/chainflip-io/polkadot-sdk.git", tag = "chainflip-substrate-stable2509" }
substrate-frame-rpc-system = { git = "https://github.com/chainflip-io/polkadot-sdk.git", tag = "chainflip-substrate-stable2509" }
substrate-wasm-builder = { git = "https://github.com/chainflip-io/polkadot-sdk.git", tag = "chainflip-substrate-stable2509" }

# Chainflip Statechain
pallet-cf-account-roles = { path = "state-chain/pallets/cf-account-roles", default-features = false }
pallet-cf-asset-balances = { path = "state-chain/pallets/cf-asset-balances", default-features = false }
pallet-cf-broadcast = { path = "state-chain/pallets/cf-broadcast", default-features = false }
pallet-cf-cfe-interface = { path = "state-chain/pallets/cf-cfe-interface", default-features = false }
pallet-cf-chain-tracking = { path = "state-chain/pallets/cf-chain-tracking", default-features = false }
pallet-cf-elections = { path = "state-chain/pallets/cf-elections", default-features = false }
pallet-cf-emissions = { path = "state-chain/pallets/cf-emissions", default-features = false }
pallet-cf-environment = { path = "state-chain/pallets/cf-environment", default-features = false }
pallet-cf-flip = { path = "state-chain/pallets/cf-flip", default-features = false }
pallet-cf-funding = { path = "state-chain/pallets/cf-funding", default-features = false }
pallet-cf-governance = { path = "state-chain/pallets/cf-governance", default-features = false }
pallet-cf-ingress-egress = { path = "state-chain/pallets/cf-ingress-egress", default-features = false }
pallet-cf-lp = { path = "state-chain/pallets/cf-lp", default-features = false }
pallet-cf-pools = { path = "state-chain/pallets/cf-pools", default-features = false }
pallet-cf-reputation = { path = "state-chain/pallets/cf-reputation", default-features = false }
pallet-cf-swapping = { path = "state-chain/pallets/cf-swapping", default-features = false }
pallet-cf-threshold-signature = { path = "state-chain/pallets/cf-threshold-signature", default-features = false }
pallet-cf-tokenholder-governance = { path = "state-chain/pallets/cf-tokenholder-governance", default-features = false }
pallet-cf-validator = { path = "state-chain/pallets/cf-validator", default-features = false }
pallet-cf-vaults = { path = "state-chain/pallets/cf-vaults", default-features = false }
pallet-cf-witnesser = { path = "state-chain/pallets/cf-witnesser", default-features = false }
pallet-cf-trading-strategy = { path = "state-chain/pallets/cf-trading-strategy", default-features = false }
pallet-cf-lending-pools = { path = "state-chain/pallets/cf-lending-pools", default-features = false }

cf-amm = { path = "state-chain/amm", default-features = false }
cf-amm-math = { path = "state-chain/amm-math", default-features = false }
cf-chains = { path = "state-chain/chains", default-features = false }
cf-primitives = { path = "state-chain/primitives", default-features = false }
cf-session-benchmarking = { path = "state-chain/cf-session-benchmarking", default-features = false }
cf-traits = { path = "state-chain/traits", default-features = false }
chainflip-node = { path = "state-chain/node", default-features = false }
custom-rpc = { path = "state-chain/custom-rpc", default-features = false }
state-chain-runtime = { path = "state-chain/runtime", default-features = false }

# Chainflip Engine + Api
cf-engine-dylib = { path = "engine-dylib" }
chainflip-api = { path = "api/lib" }
chainflip-engine = { path = "engine" }
engine-p2p = { path = "engine/p2p" }
engine-sc-client = { path = "engine/sc-client" }
engine-proc-macros = { path = "engine-proc-macros" }
cf-node-client = { path = "api/cf-node-client" }
cf-rpc-types = { path = "api/cf-rpc-types" }
cf-rpc-apis = { path = "api/cf-rpc-apis" }

# Chainflip utilities and others
cf-runtime-macros = { path = "state-chain/runtime-utilities/macros", default-features = false }
cf-runtime-utilities = { path = "state-chain/runtime-utilities", default-features = false }
cf-test-utilities = { path = "state-chain/test-utilities" }
cf-utilities = { package = "utilities", path = "utilities", default-features = false }
cfe-events = { path = "state-chain/cfe-events", default-features = false }
engine-upgrade-utils = { path = "engine-upgrade-utils" }
multisig = { path = "engine/multisig" }
scale-json = { path = "utilities/scale-json", default-features = false }
sol-prim = { path = "foreign-chains/solana/sol-prim", default-features = false }
generic-typeinfo-derive = { path = "state-chain/generic-typeinfo-derive/macro" }
ethereum-eip712 = { path = "state-chain/ethereum-eip712", default-features = false }

# The list of dependencies below (which can be both direct and indirect dependencies) are crates
# that are suspected to be CPU-intensive, and that are unlikely to require debugging (as some of
# their debug info might be missing) or to require to be frequently recompiled. We compile these
# dependencies with `opt-level=3` even in "dev" mode in order to make "dev" mode more usable.
# The majority of these crates are cryptographic libraries.
#
# If you see an error mentioning "profile package spec ... did not match any packages", it
# probably concerns this list.
#
# This list is ordered alphabetically.
[profile.dev.package]
blake2 = { opt-level = 3 }
blake2b_simd = { opt-level = 3 }
chacha20poly1305 = { opt-level = 3 }
cranelift-codegen = { opt-level = 3 }
cranelift-wasm = { opt-level = 3 }
crc32fast = { opt-level = 3 }
crossbeam-deque = { opt-level = 3 }
crypto-mac = { opt-level = 3 }
curve25519-dalek = { opt-level = 3 }
ed25519-zebra = { opt-level = 3 }
flate2 = { opt-level = 3 }
futures-channel = { opt-level = 3 }
hash-db = { opt-level = 3 }
hashbrown = { opt-level = 3 }
hmac = { opt-level = 3 }
integer-sqrt = { opt-level = 3 }
k256 = { opt-level = 3 }
keccak = { opt-level = 3 }
libm = { opt-level = 3 }
librocksdb-sys = { opt-level = 3 }
libsecp256k1 = { opt-level = 3 }
libz-sys = { opt-level = 3 }
mio = { opt-level = 3 }
nalgebra = { opt-level = 3 }
num-bigint = { opt-level = 3 }
parking_lot = { opt-level = 3 }
parking_lot_core = { opt-level = 3 }
percent-encoding = { opt-level = 3 }
primitive-types = { opt-level = 3 }
ring = { opt-level = 3 }
rustls = { opt-level = 3 }
secp256k1 = { opt-level = 3 }
sha2 = { opt-level = 3 }
sha3 = { opt-level = 3 }
smallvec = { opt-level = 3 }
snow = { opt-level = 3 }
twox-hash = { opt-level = 3 }
uint = { opt-level = 3 }
x25519-dalek = { opt-level = 3 }
yamux = { opt-level = 3 }
zeroize = { opt-level = 3 }

[profile.dev]
rpath = true

[profile.release]
# Substrate runtime requires unwinding.
panic = "unwind"
rpath = true

[profile.production]
inherits = "release"

# Sacrifice compile speed for execution speed by using optimization flags:

# https://doc.rust-lang.org/rustc/linker-plugin-lto.html
lto = "fat"
# https://doc.rust-lang.org/rustc/codegen-options/index.html#codegen-units
codegen-units = 1

# IMPORTANT: this makes sure that when compiling for production, we enable
# the `production` feature. This is used to ensure that 'turbo bouncer' mode
# is not accidentally enabled on a live network.
#
# See state-chain/primitives/src/lib.rs, to check out how we make sure that
# the features 'production' and 'turbo' are mutually exclusive.
#
# DO NOT CHANGE OR REMOVE THIS LINE.
rustflags = ["--cfg 'feature=\"production\"'"]
