[package]
name = "chainflip-common"
homepage = 'https://chainflip.io'
version = "0.0.1"
authors = ["Chainflip Team <https://github.com/chainflip-io>"]
edition = "2018"

[dependencies]
bs58 = { version = "0.4", default-features = false, features = ["alloc", "check"] }
bech32 = { version = "^0.7.3", package = 'bech32-no_std', default-features = false  }
base58-monero = { version = "0.2.0", default-features = false, features = ["check"] }
hex = { version = "0.4", default-features = false }
tiny-keccak = { version = "^2.0.0", features = ["keccak"] }
sp-std = { version =  '2.0.0', default-features = false  }
uuid = { version = "0.8.1", default-features = false, features = ["v4", "serde", "wasm-bindgen"] }
ring = { version = "^0.16", default-features = false, features = ["alloc"] }
base64 = { version = "^0.13", default-features = false, features = ["alloc"] }
serde = { version = "^1.0", default-features = false, features = ["derive", "alloc"] }
# alias "parity-scale-code" to "codec"
codec = { version = '1.3.5', package = 'parity-scale-codec', default-features = false, features = ['derive'] }
lazy_static = { version = '^1.4.0', optional = true }
siphasher = { version = "0.3", default-features = false }

[dev-dependencies]
serde_json = { version = "1.0", default-features = false, features = ["alloc"]  }

[features]
default = ['std']
std = [
    'lazy_static',
    'sp-std/std',
    'codec/std',
    'uuid/std',
    'hex/std',
    'ring/std',
    'base64/std',
    "bs58/std",
    "bech32/std",
    "serde/std"
]
