[package]
authors = ["Chainflip team <https://github.com/chainflip-io>"]
build = "build.rs"
edition = "2021"
name = "cf-engine-dylib"
version = "1.7.11"

[lib]
crate-type = ["cdylib"]
name = "chainflip_engine_v1_7_11"
path = "src/lib.rs"

[dependencies]
chainflip-engine = { workspace = true }
engine-proc-macros = { workspace = true }
engine-upgrade-utils = { workspace = true }

[build-dependencies]
engine-upgrade-utils = { workspace = true }
