[package]
name = "engine-runner"
version = "0.1.0"
authors = ["Kyle"]
build = "build.rs"
edition = "2021"

[package.metadata.deb]
assets = [
    [
        "target/release/chainflip-runner",
        "usr/bin/chainflip-engine",
        "755",
    ],
    [
        "target/release/chainflip_engine_v1_4_0.so",
        # TODO: How to export the LD_LIBRARY_PATH to have this path.
        "usr/lib/chainflip-engine/chainflip_engine_v1_4_0",
    ],
    [
        "target/release/chainflip_engine_v1_3_0",
        "usr/lib/chainflip-engine/chainflip_engine_v1_3_0",
    ],
]

depends = "$auto, systemd"
extended-description = """\
Chainflip Validator Engine Package"""
maintainer = "Chainflip Labs GmbH <dev@chainflip.io>"
maintainer-scripts = "package/"
name = "chainflip-engine"
priority = "required"
section = "rust"
systemd-units = [{ unit-name = "chainflip-engine", enable = false }]
[package.metadata.deb.variants.test]
maintainer-scripts = "package/test"

[package.metadata.deb.variants.sisyphos]
maintainer-scripts = "package/sisyphos"

[package.metadata.deb.variants.perseverance]
maintainer-scripts = "package/perseverance"

[package.metadata.deb.variants.berghain]
maintainer-scripts = "package/berghain"

[dependencies]
# Ensures correct compilation order. We want to compile the engine dylib first, then the runner.
cf-engine-dylib = { path = "../engine-dylib" }
engine-upgrade-utils = { path = "../engine-upgrade-utils" }
engine-proc-macros = { path = "../engine-proc-macros" }
anyhow = "1.0"
