[package]
authors = ["Chainflip team <https://github.com/chainflip-io>"]
build = 'build.rs'
edition = '2021'
name = "chainflip-engine"
version = "1.7.0"

[lib]
crate-type = ["lib"]
name = "chainflip_engine"
path = 'src/lib.rs'

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
async-broadcast = { workspace = true }
async-channel = { workspace = true }
async-trait = { workspace = true }
bincode = { workspace = true }
bitcoin = { workspace = true, features = ["serde"] }
chrono = { workspace = true, features = ["clock"] }
clap = { workspace = true, features = ["derive", "env"] }
config = { workspace = true }
fs_extra = { workspace = true }
futures = { workspace = true }
futures-core = { workspace = true }
futures-util = { workspace = true }
hex = { workspace = true }
httparse = { workspace = true }
http = { workspace = true }
itertools = { workspace = true }
jsonrpsee = { workspace = true, features = ["full"] }

dyn-clone = { workspace = true }
ethbloom = { workspace = true }
ethers = { workspace = true, features = ["rustls"] }
lazy_static = { workspace = true }
num-bigint = { workspace = true }
num-derive = { workspace = true }
num-traits = { workspace = true }
secp256k1 = { workspace = true }
serde = { workspace = true, features = ["derive", "rc"] }
serde_json = { workspace = true }
sha2 = { workspace = true }
subxt = { workspace = true, features = ["substrate-compat"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full", "test-util"] }
tokio-stream = { workspace = true, features = ["sync"] }
url = { workspace = true }
web3 = { workspace = true, features = [
	"ws-tls-tokio",
] }
zeroize = { workspace = true }
curve25519-dalek = { workspace = true, features = [
  "serde",
] }
ed25519-dalek = { workspace = true }
pin-project = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true, features = ["rustls-tls"] }
tracing = { workspace = true }
x25519-dalek = { workspace = true, features = ["serde"] }
zmq = { git = "https://github.com/chainflip-io/rust-zmq.git", tag = "chainflip-v0.9.2+1", features = [
	"vendored",
] }
warp = { workspace = true }
regex = { workspace = true }
lazy_format = { workspace = true }

# Local deps
cf-chains = { path = "../state-chain/chains" }
cf-primitives = { path = "../state-chain/primitives" }
chainflip-node = { path = "../state-chain/node" }
custom-rpc = { path = "../state-chain/custom-rpc" }
engine-upgrade-utils = { path = "../engine-upgrade-utils" }
multisig = { path = "multisig" }
pallet-cf-account-roles = { path = "../state-chain/pallets/cf-account-roles" }
pallet-cf-broadcast = { path = "../state-chain/pallets/cf-broadcast" }
pallet-cf-chain-tracking = { path = "../state-chain/pallets/cf-chain-tracking" }
pallet-cf-elections = { path = "../state-chain/pallets/cf-elections" }
pallet-cf-environment = { path = "../state-chain/pallets/cf-environment" }
pallet-cf-flip = { path = "../state-chain/pallets/cf-flip" }
pallet-cf-governance = { path = "../state-chain/pallets/cf-governance" }
pallet-cf-ingress-egress = { path = "../state-chain/pallets/cf-ingress-egress" }
pallet-cf-reputation = { path = "../state-chain/pallets/cf-reputation" }
pallet-cf-funding = { path = "../state-chain/pallets/cf-funding" }
pallet-cf-swapping = { path = "../state-chain/pallets/cf-swapping" }
pallet-cf-threshold-signature = { path = "../state-chain/pallets/cf-threshold-signature" }
pallet-cf-validator = { path = "../state-chain/pallets/cf-validator" }
pallet-cf-vaults = { path = "../state-chain/pallets/cf-vaults" }
pallet-cf-witnesser = { path = "../state-chain/pallets/cf-witnesser" }
pallet-cf-cfe-interface = { path = "../state-chain/pallets/cf-cfe-interface" }
state-chain-runtime = { path = "../state-chain/runtime" }
utilities = { path = "../utilities" }
sol-prim = { path = "../foreign-chains/solana/sol-prim", features = [
	"pda",
	"str",
	"serde",
	"scale",
] }

# substrate deps
cf-amm = { path = "../state-chain/amm" }
codec = { workspace = true, features = [
	"derive",
	"full",
] }
frame-support = { git = "https://github.com/chainflip-io/polkadot-sdk.git", tag = "chainflip-substrate-1.15.2+2" }
frame-system = { git = "https://github.com/chainflip-io/polkadot-sdk.git", tag = "chainflip-substrate-1.15.2+2" }
sc-rpc-api = { git = "https://github.com/chainflip-io/polkadot-sdk.git", tag = "chainflip-substrate-1.15.2+2" }
sc-transaction-pool-api = { git = "https://github.com/chainflip-io/polkadot-sdk.git", tag = 'chainflip-substrate-1.15.2+2' }
scale-info = { workspace = true, features = ["derive"] }
sp-core = { git = "https://github.com/chainflip-io/polkadot-sdk.git", tag = "chainflip-substrate-1.15.2+2" }
sp-rpc = { git = "https://github.com/chainflip-io/polkadot-sdk.git", tag = "chainflip-substrate-1.15.2+2" }
sp-runtime = { git = "https://github.com/chainflip-io/polkadot-sdk.git", tag = "chainflip-substrate-1.15.2+2" }
sp-version = { git = "https://github.com/chainflip-io/polkadot-sdk.git", tag = "chainflip-substrate-1.15.2+2" }
substrate-frame-rpc-system = { git = "https://github.com/chainflip-io/polkadot-sdk.git", tag = "chainflip-substrate-1.15.2+2" }

frame-metadata = { workspace = true, features = ["current"] }
serde_bytes = { workspace = true }
bs58 = { workspace = true }
base64 = { workspace = true }
rocksdb = { version = "0.21.0", default-features = false, features = ["lz4"] }

[dev-dependencies]
csv = { workspace = true }
ethereum = { workspace = true }
mockall = { workspace = true, features = ["nightly"] }
multisig = { path = "multisig", features = ["test"] }
rlp = { workspace = true }
tempfile = { workspace = true }
utilities = { package = "utilities", path = "../utilities", features = [
	"test-utils",
] }
serde_path_to_error = "*"

[build-dependencies]
substrate-build-script-utils = { git = "https://github.com/chainflip-io/polkadot-sdk.git", tag = "chainflip-substrate-1.15.2+2" }
engine-upgrade-utils = { path = "../engine-upgrade-utils" }

[features]
integration-test = []
std = []
